# bmstu

./: .gitignore  README.md
sem_02_mag/cm/lab_01/: main.m
sem_02_mag/cm/lab_02/: main.m
sem_02_mag/cm/lab_03/: main.m
sem_02_mag/cm/lab_04/: main.m
sem_02_mag/compilers/lab_01/: go.mod  go.sum
sem_02_mag/compilers/lab_02/: go.mod  task.dot
sem_02_mag/compilers/lab_03/: go.mod
sem_02_mag/nns/lab_01/: apples.ipynb
sem_02_mag/nns/lab_02/: apples.ipynb
sem_02_mag/nns/lab_03/: reviews.ipynb
sem_02_mag/nns/lab_04/: apples.ipynb
sem_02_mag/nns/lab_05/: apples.ipynb
sem_05/alg_analysis/lab_01/: go.mod  makefile
sem_05/alg_analysis/lab_02/: go.mod  makefile
sem_05/alg_analysis/lab_03/: go.mod  makefile
sem_05/alg_analysis/lab_04/: makefile
sem_05/alg_analysis/lab_04_hw/: ig.graphml  (+4 more)
sem_05/nir/: presentation.key
sem_06/os/: seqfile.c  single.c
sem_06/ppo/: .gitlab-ci.yml  README.md
sem_07/info-security/lab_01/: CMakeLists.txt  main.c
sem_07/info-security/lab_01/configs/: enigma.json
sem_07/info-security/lab_01/enigma/: enigma.c  enigma.h  json.c
sem_07/info-security/lab_01/ioutils/: ioutils.c  ioutils.h
sem_07/info-security/lab_01/report/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  coursework.bcf  coursework.tex  preamble.inc.tex
sem_07/info-security/lab_01/report/inc/svg/: encode.graphml
sem_07/info-security/lab_01/scripts/: gen.go
sem_07/networks-course/: CMakeLists.txt  Dockerfile  docker-compose.yml  errors.h  http.c  http.h  log.c  log.h  main.c
(+1370 files in other folders)
